[gd_scene load_steps=9 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.34033
margin_right = 3.34033
texture = ExtResource( 2 )
expand = true

[node name="playerbuttom" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 371.556
margin_top = 166.283
margin_right = 473.556
margin_bottom = 261.283
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="playerbuttom"]
margin_top = 6.67017
margin_right = 101.0
margin_bottom = 92.6702
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK"
max_lines_visible = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 22.3298
margin_top = 32.351
margin_right = 998.33
margin_bottom = 95.351

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 976.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="PlayerInput" type="TextEdit" parent="."]
margin_left = 47.0001
margin_top = 472.351
margin_right = 867.0
margin_bottom = 547.351
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
text = "input"
[connection signal="pressed" from="playerbuttom" to="." method="_on_playerbuttom_pressed"]
[connection signal="text_changed" from="PlayerInput" to="." method="_on_playerinout_text_changed"]
